# glide

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
electron/: glide.ts  main.ts  preload.ts
public/: page-00.md  page-01.md  page-02.md  page-03.md  page-04.md  page-05.md  page-06.md  page-07.md  page-08.md  page-09.md  page-10.md  page-11.md  page-12.md  page-13.md  page-14.md  page-15.md  page-16.md  page-17.md  page-18.md  page-19.md  page-20.md  page-21.md  page-22.md  page-23.md  page-24.md  page-25.md  page-26.md  page-27.md  page-28.md  page-29.md  page-30.md  page-31.md  page-32.md  page-33.md  page-34.md  page-35.md  page-36.md  page-37.md  page-38.md  page-39.md  (+11 more)
rust/: Cargo.toml  build.rs
rust/src/: grabber.rs  main.rs  store.rs
rust/src/gl/: lib.rs  mod.rs
src/: main.ts  renderer.d.ts  style.css
