[package]
name = "glide-capture"
version = "0.0.1"
edition = "2021"

[dependencies]
cacao = "0.2"
once_cell = "1"
objc = "0.2.7"
block = "0.1"
notan = "0.9.0"
nannou_osc = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
bindgen = "0.58.1"
